--- a/packages/infra-aws/package.json
+++ b/packages/infra-aws/package.json
@@ -69,7 +69,7 @@
   },
   "scripts": {
     "dist+deploy": "yarn dist && yarn deploy",
-    "deploy": "cdk deploy $npm_package_config_aptacks --require-approval never ",
+    "deploy": "cdk deploy --require-approval never $npm_package_config_appStacks",
     "upgrade:show": "ncu",
     "upgrade:do": "ncu -u",
     "test:unit": "jest --config=jest.config.unit.js --coverage",
