--- a/package.json
+++ b/package.json
@@ -9,28 +9,29 @@
     "packages/*"
   ],
   "dependencies": {
-    "source-map-support": "^0.5.16"
+    "source-map-support": "^0.5.19"
   },
   "devDependencies": {
-    "@types/jest": "25.1.4",
-    "@types/node": "^13.9.8",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
+    "@types/jest": "25.2.2",
+    "@types/node": "^14.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
     "add": "^2.0.6",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "husky": "^4.2.3",
-    "jest": "25.2.4",
-    "lint-staged": "^10.1.1",
-    "npm-check-updates": "^4.1.0",
-    "prettier": "^2.0.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^4.2.5",
+    "jest": "26.0.1",
+    "lint-staged": "^10.2.2",
+    "npm-check-updates": "^6.0.0",
+    "prettier": "^2.0.5",
     "shx": "^0.3.2",
-    "ts-jest": "25.3.0",
-    "ts-node": "^8.8.1",
-    "typescript": "^3.8.3",
-    "yarn": "^1.22.4"
+    "ts-jest": "25.5.1",
+    "ts-node": "^8.10.1",
+    "typescript": "^3.9.2",
+    "yarn": "^1.22.4",
+    "ncu": "^0.2.1"
   },
   "scripts": {
     "deploy": "yarn dist-lock && yarn workspace app-node dist && yarn workspace infra-aws dist+deploy",
@@ -46,7 +47,8 @@
     "lint": "eslint --cache './packages/**/*.{ts,tsx}'",
     "lint-fix": "eslint --cache --fix '**/*.{ts,tsx}'",
     "dist-lock": "shx cp yarn.lock packages/app-node",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "update": "yarn workspace infra-aws ncu -u && yarn workspace app-node ncu -u && ncu -u && yarn install"
   },
   "husky": {
     "hooks": {
