--- a/package.json
+++ b/package.json
@@ -12,26 +12,21 @@
     "source-map-support": "^0.5.19"
   },
   "devDependencies": {
-    "@types/jest": "26.0.3",
-    "@types/node": "^14.0.14",
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
+    "@types/jest": "26.0.4",
+    "@types/node": "^14.0.23",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
     "add": "^2.0.6",
-    "eslint": "^7.3.1",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
     "jest": "26.1.0",
     "lint-staged": "^10.2.11",
     "npm-check-updates": "^7.0.1",
     "prettier": "^2.0.5",
     "shx": "^0.3.2",
-    "ts-jest": "26.1.1",
+    "ts-jest": "26.1.2",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.5",
-    "yarn": "^1.22.4",
-    "ncu": "^0.2.1"
+    "typescript": "^3.9.6",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "deploy": "yarn dist-lock && yarn workspace app-node dist && yarn workspace infra-aws dist+deploy",
