--- a/packages/app-node/package.json
+++ b/packages/app-node/package.json
@@ -4,18 +4,23 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@bugsnag/node": "^7.1.1",
+    "@bugsnag/node": "^7.2.0",
     "@types/uuid": "^8.0.0",
-    "aws-sdk": "2.706.0",
+    "aws-sdk": "2.713.0",
     "luxon": "^1.24.1",
     "uuid": "^8.2.0"
   },
   "devDependencies": {
     "@types/luxon": "^1.24.1",
-    "@types/node": "^14.0.14",
+    "@types/node": "^14.0.23",
     "@types/uuid": "^8.0.0",
     "jest-circus": "^26.1.0",
-    "shx": "^0.3.2"
+    "shx": "^0.3.2",
+    "eslint": "^7.3.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.0.5"
   },
   "scripts": {
     "dist": "yarn clean+build+bundle",
