--- a/packages/infra-aws/package.json
+++ b/packages/infra-aws/package.json
@@ -4,63 +4,67 @@
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
-    "@aws-cdk/assert": "1.47.0",
-    "@aws-cdk/assets": "1.47.0",
-    "@aws-cdk/aws-apigateway": "1.47.0",
-    "@aws-cdk/aws-applicationautoscaling": "1.47.0",
-    "@aws-cdk/aws-autoscaling": "1.47.0",
-    "@aws-cdk/aws-autoscaling-common": "1.47.0",
-    "@aws-cdk/aws-autoscaling-hooktargets": "1.47.0",
-    "@aws-cdk/aws-batch": "1.47.0",
-    "@aws-cdk/aws-certificatemanager": "1.47.0",
-    "@aws-cdk/aws-cloudformation": "1.47.0",
-    "@aws-cdk/aws-cloudfront": "1.47.0",
-    "@aws-cdk/aws-cloudwatch": "1.47.0",
-    "@aws-cdk/aws-codebuild": "1.47.0",
-    "@aws-cdk/aws-codecommit": "1.47.0",
-    "@aws-cdk/aws-codedeploy": "1.47.0",
-    "@aws-cdk/aws-codepipeline": "1.47.0",
-    "@aws-cdk/aws-codepipeline-actions": "1.47.0",
-    "@aws-cdk/aws-dynamodb": "1.47.0",
-    "@aws-cdk/aws-ec2": "1.47.0",
-    "@aws-cdk/aws-ecr": "1.47.0",
-    "@aws-cdk/aws-ecr-assets": "1.47.0",
-    "@aws-cdk/aws-ecs": "1.47.0",
-    "@aws-cdk/aws-elasticloadbalancing": "1.47.0",
-    "@aws-cdk/aws-elasticloadbalancingv2": "1.47.0",
-    "@aws-cdk/aws-events": "1.47.0",
-    "@aws-cdk/aws-events-targets": "1.47.0",
-    "@aws-cdk/aws-glue": "1.47.0",
-    "@aws-cdk/aws-iam": "1.47.0",
-    "@aws-cdk/aws-kinesisfirehose": "1.47.0",
-    "@aws-cdk/aws-kms": "1.47.0",
-    "@aws-cdk/aws-lambda": "1.47.0",
-    "@aws-cdk/aws-logs": "1.47.0",
-    "@aws-cdk/aws-route53": "1.47.0",
-    "@aws-cdk/aws-route53-targets": "1.47.0",
-    "@aws-cdk/aws-s3": "1.47.0",
-    "@aws-cdk/aws-s3-assets": "1.47.0",
-    "@aws-cdk/aws-sam": "1.47.0",
-    "@aws-cdk/aws-secretsmanager": "1.47.0",
-    "@aws-cdk/aws-servicediscovery": "1.47.0",
-    "@aws-cdk/aws-sns": "1.47.0",
-    "@aws-cdk/aws-sns-subscriptions": "1.47.0",
-    "@aws-cdk/aws-sqs": "1.47.0",
-    "@aws-cdk/aws-ssm": "1.47.0",
-    "@aws-cdk/aws-stepfunctions": "1.47.0",
-    "@aws-cdk/aws-stepfunctions-tasks": "1.47.0",
-    "@aws-cdk/core": "1.47.0",
-    "@aws-cdk/custom-resources": "1.47.0",
-    "@aws-cdk/cx-api": "1.47.0",
-    "@aws-cdk/region-info": "1.47.0",
+    "@aws-cdk/assert": "1.51.0",
+    "@aws-cdk/assets": "1.51.0",
+    "@aws-cdk/aws-apigateway": "1.51.0",
+    "@aws-cdk/aws-applicationautoscaling": "1.51.0",
+    "@aws-cdk/aws-autoscaling": "1.51.0",
+    "@aws-cdk/aws-autoscaling-common": "1.51.0",
+    "@aws-cdk/aws-autoscaling-hooktargets": "1.51.0",
+    "@aws-cdk/aws-batch": "1.51.0",
+    "@aws-cdk/aws-certificatemanager": "1.51.0",
+    "@aws-cdk/aws-cloudformation": "1.51.0",
+    "@aws-cdk/aws-cloudfront": "1.51.0",
+    "@aws-cdk/aws-cloudwatch": "1.51.0",
+    "@aws-cdk/aws-codebuild": "1.51.0",
+    "@aws-cdk/aws-codecommit": "1.51.0",
+    "@aws-cdk/aws-codedeploy": "1.51.0",
+    "@aws-cdk/aws-codepipeline": "1.51.0",
+    "@aws-cdk/aws-codepipeline-actions": "1.51.0",
+    "@aws-cdk/aws-dynamodb": "1.51.0",
+    "@aws-cdk/aws-ec2": "1.51.0",
+    "@aws-cdk/aws-ecr": "1.51.0",
+    "@aws-cdk/aws-ecr-assets": "1.51.0",
+    "@aws-cdk/aws-ecs": "1.51.0",
+    "@aws-cdk/aws-elasticloadbalancing": "1.51.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "1.51.0",
+    "@aws-cdk/aws-events": "1.51.0",
+    "@aws-cdk/aws-events-targets": "1.51.0",
+    "@aws-cdk/aws-glue": "1.51.0",
+    "@aws-cdk/aws-iam": "1.51.0",
+    "@aws-cdk/aws-kinesisfirehose": "1.51.0",
+    "@aws-cdk/aws-kms": "1.51.0",
+    "@aws-cdk/aws-lambda": "1.51.0",
+    "@aws-cdk/aws-logs": "1.51.0",
+    "@aws-cdk/aws-route53": "1.51.0",
+    "@aws-cdk/aws-route53-targets": "1.51.0",
+    "@aws-cdk/aws-s3": "1.51.0",
+    "@aws-cdk/aws-s3-assets": "1.51.0",
+    "@aws-cdk/aws-sam": "1.51.0",
+    "@aws-cdk/aws-secretsmanager": "1.51.0",
+    "@aws-cdk/aws-servicediscovery": "1.51.0",
+    "@aws-cdk/aws-sns": "1.51.0",
+    "@aws-cdk/aws-sns-subscriptions": "1.51.0",
+    "@aws-cdk/aws-sqs": "1.51.0",
+    "@aws-cdk/aws-ssm": "1.51.0",
+    "@aws-cdk/aws-stepfunctions": "1.51.0",
+    "@aws-cdk/aws-stepfunctions-tasks": "1.51.0",
+    "@aws-cdk/core": "1.51.0",
+    "@aws-cdk/custom-resources": "1.51.0",
+    "@aws-cdk/cx-api": "1.51.0",
+    "@aws-cdk/region-info": "1.51.0",
     "@types/fs-extra": "^9.0.1",
-    "aws-cdk": "1.47.0",
+    "aws-cdk": "1.51.0",
     "constructs": "3.0.4",
     "fs-extra": "^9.0.1",
     "jest": "26.1.0",
     "removeNPMAbsolutePaths": "^2.0.0",
     "source-map-support": "^0.5.19",
-    "tsas-cdk": "0.0.18"
+    "tsas-cdk": "0.0.18",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.0.5"
   },
   "config": {
     "appStacks": "GreetingServiceStack",
